Add inception ai poc demo video

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         <section class="currently-playing yui-gf">
             <div class="section-title">Currently playing with</div>
             <p>
-                Anthropic Claude, Ollama and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
-                where LLM based AI Agents are co-ordinating more and more human and financial resources.
+                Langchain and Anthropic Claude to become a 20x developer.
             </p>
             <p>
-                Potentially looking for funding to build a <a href="./nostransact.html">Nostr/Bitcoin open commerce platform</a>
+                Higher level dev is the future, and the future is now:
+                <a target="_blank" href="https://incept5ai-demos.s3.eu-west-1.amazonaws.com/inception-ai-10-min-edit-optimised.mp4">Inception AI POC Video Demo (10 mins)</a>
             </p>
         </section>
 
