--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 A good communicator, interested in the wider business environment and able to offer strategic insight as
                 well as technical leadership. A passion for working with smart (and funny) people to engineer great product.
             </p>
+            <p>
+                Currently looking for a new role involving "Higher Level Dev" - AI augmented development, which I am becoming proficient at.
+            </p>
         </section>
 
         <section class="currently-playing yui-gf">
@@ -102,10 +105,10 @@
             <div class="section-title">Domains</div>
             <div class="row">
                 <div class="col-md-4">
-                    <h5>Banking & Payments</h5>
+                    <h5>AI & LLMs</h5>
                 </div>
                 <div class="col-md-4">
-                    <h5>AI & Apps</h5>
+                    <h5>Banking & Payments</h5>
                 </div>
                 <div class="col-md-4">
                     <h5>Travel Tech</h5>
@@ -135,27 +138,27 @@
                 <div class="col-md-4">
                     <ul class="talent">
                         <li>Java, Kotlin</li>
-                        <li>Quarkus, Spring, Micronaut</li>
+                        <li>Quarkus, Spring etc</li>
                         <li>Microservices, Functions</li>
-                        <li>Google Cloud Platform & AWS</li>
+                        <li>GCP & AWS</li>
                         <li class="last">Docker, Kubernetes</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="talent">
-                        <li>AI, LLMs, Prompt Engineering</li>
+                        <li>AI, LLMs, Prompts</li>
                         <li>PostgreSQL, Supabase</li>
-                        <li>Big Data, Messaging, Kafka</li>
-                        <li>SQL, NoSQL & Graph DB's</li>
-                        <li class="last">Security, OAuth2, OIDC, FAPI</li>
+                        <li>Messaging & Eventing</li>
+                        <li>SQL, NoSQL, Graph DB's</li>
+                        <li class="last">Security, OAuth2, OIDC</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="talent">
                         <li>Gradle, Maven</li>
-                        <li>Continuous Integration & Delivery</li>
+                        <li>CI & CD</li>
                         <li>Test Driven Development</li>
-                        <li>Android, GraphQL</li>
+                        <li>Python, Android, GraphQL</li>
                         <li class="last">JavaScript, Node JS</li>
                     </ul>
                 </div>
@@ -263,7 +266,6 @@
             <div class="section-title">Github</div>
             <p><a href="https://github.com/TiGz">https://github.com/TiGz</a></p>
             <p><a href="https://github.com/CloudburstStrategy">https://github.com/CloudburstStrategy</a></p>
-            <p><a href="https://github.com/bots4j">https://github.com/bots4j</a></p>
         </section>
 
         <section class="other-interests yui-gf">
