Update Technical section in index.html to highlight frontend technologies

--- a/index.html
+++ b/index.html
@@ -137,29 +137,32 @@
             <div class="row">
                 <div class="col-md-4">
                     <ul class="talent">
+                        <li>HTML, CSS</li>
+                        <li>JavaScript</li>
+                        <li>Vue, React</li>
+                        <li>NodeJS</li>
                         <li>Java, Kotlin</li>
-                        <li>Quarkus, Spring etc</li>
+                        <li class="last">Quarkus, Spring</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="talent">
                         <li>Microservices, Functions</li>
                         <li>GCP & AWS</li>
-                        <li class="last">Docker, Kubernetes</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="talent">
+                        <li>Docker, Kubernetes</li>
                         <li>AI, LLMs, Prompts</li>
                         <li>PostgreSQL, Supabase</li>
-                        <li>Messaging & Eventing</li>
-                        <li>SQL, NoSQL, Graph DB's</li>
-                        <li class="last">Security, OAuth2, OIDC</li>
+                        <li class="last">Messaging & Eventing</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="talent">
+                        <li>SQL, NoSQL, Graph DB's</li>
+                        <li>Security, OAuth2, OIDC</li>
                         <li>Gradle, Maven</li>
                         <li>CI & CD</li>
                         <li>Test Driven Development</li>
-                        <li>Python, Android, GraphQL</li>
-                        <li class="last">JavaScript, Node JS</li>
+                        <li class="last">Python, Android, GraphQL</li>
                     </ul>
                 </div>
             </div>
