rework cv to include full stack and HLD

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Chesney | Software Engineer | ajchesney@gmail.com</title>
+    <title>Adam Chesney | Full Stack Engineer | ajchesney@gmail.com</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -72,7 +72,7 @@
     <div class="container">
         <header class="text-center">
             <h1>Adam Chesney</h1>
-            <h2>Software Engineer, Architect</h2>
+            <h2>Full Stack Engineer, Architect</h2>
             <p><a href="mailto:ajchesney@gmail.com">ajchesney@gmail.com</a></p>
             <p><a href="adamchesney.pdf" class="btn btn-primary">Download PDF</a></p>
         </header>
@@ -80,24 +80,24 @@
         <section class="profile yui-gf">
             <div class="section-title">Profile</div>
             <p>
-                20+ years building innovative software products and services in agile environments.
+                25 years building innovative software products and services in agile environments.
                 At my best when distilling complex business requirements into a clear, simple and lean software architecture.
                 A good communicator, interested in the wider business environment and able to offer strategic insight as
                 well as technical leadership. A passion for working with smart (and funny) people to engineer great product.
             </p>
             <p>
-                Currently looking for a new role involving "Higher Level Dev" - AI augmented development, which I am becoming proficient at.
+                Currently looking for short to medium term contract work as a backend or full stack engineer.
             </p>
         </section>
 
         <section class="currently-playing yui-gf">
-            <div class="section-title">Currently playing with</div>
+            <div class="section-title">Higher Level Development</div>
             <p>
-                Langchain and Anthropic Claude to become a 20x developer.
+                When Anthropic released Claude Sonnet 3.5 on Friday, June 21st, 2024, software development changed forever.
+                Since then I have been building my own LLM-Powered Software Engineering Agents to become a 10x engineer.
             </p>
             <p>
-                Higher level dev is the future, and the future is now:
-                <a target="_blank" href="https://incept5ai-demos.s3.eu-west-1.amazonaws.com/inception-ai-10-min-edit-optimised.mp4">Inception AI POC Video Demo (10 mins)</a>
+                <a target="_blank" href="https://higherlevel.dev">Higher Level Dev is the future, and the future is now.</a>
             </p>
         </section>
 
@@ -119,16 +119,16 @@
         <section class="skills yui-gf">
             <div class="section-title">Skills</div>
             <div class="talent">
+                <h5>AI Augmented Development</h5>
+                <p>Pioneering a new approach to software development using agentic workflows to radically improve software development productivity.</p>
+            </div>
+            <div class="talent">
                 <h5>Infrastructure</h5>
-                <p>Primarily Java server side engineering with a focus on open source tools, cloud computing and data engineering</p>
+                <p>Server side engineering with a focus on open source tools, cloud computing and data engineering</p>
             </div>
             <div class="talent">
                 <h5>API Design</h5>
                 <p>A talent for building developer friendly web service APIs that scale</p>
-            </div>
-            <div class="talent">
-                <h5>Performance</h5>
-                <p>A history of performance testing, lowering costs and evolving architectures towards more elasticity, flexibility and scalability</p>
             </div>
         </section>
 
@@ -137,20 +137,20 @@
             <div class="row">
                 <div class="col-md-4">
                     <ul class="talent">
-                        <li>HTML, CSS</li>
+                        <li>Java, Kotlin</li>
+                        <li>Quarkus, Spring</li>
+                        <li>NodeJS</li>
                         <li>JavaScript</li>
                         <li>Vue, React</li>
-                        <li>NodeJS</li>
-                        <li>Java, Kotlin</li>
-                        <li class="last">Quarkus, Spring</li>
+                        <li class="last">HTML, CSS</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="talent">
-                        <li>Microservices, Functions</li>
-                        <li>GCP & AWS</li>
-                        <li>Docker, Kubernetes</li>
                         <li>AI, LLMs, Prompts</li>
+                        <li>Microservices, Functions</li>
+                        <li>AWS & GCP</li>
+                        <li>Docker, Kubernetes</li>
                         <li>PostgreSQL, Supabase</li>
                         <li class="last">Messaging & Eventing</li>
                     </ul>
@@ -171,8 +171,16 @@
         <section class="experience yui-gf">
             <div class="section-title">Experience</div>
             <div class="job">
+                <h4>Higher Level Software Ltd</h4>
+                <h5>Founder (Aug 2024 to Present)</h5>
+                <p>
+                    Pioneering a new approach to software development using LLM-Powered Software Engineering Agents.
+                    I have been building the <a target="_blank" href="https://www.higherleveldev.com/devkit">Higher Level Dev Kit</a> which is a NodeJS server running Langchain/Langgraph powered agents and a Vue3 web UI.
+                </p>
+            </div>
+            <div class="job">
                 <h4>Velo Payments</h4>
-                <h5>Lead API Engineer (Jan 2018 to Present)</h5>
+                <h5>Lead API Engineer (Jan 2018 to Aug 2024)</h5>
                 <p>
                     Velo Payments is a an "all remote, no offices" start-up that was re-imagining 
                     business payments for the gig-economy. Working remotely with a great team of people to engineer a truly next-gen, data-driven, 
