rework cv to include full stack and HLD

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <h5>Banking & Payments</h5>
                 </div>
                 <div class="col-md-4">
-                    <h5>Travel Tech</h5>
+                    <h5>Dev Tools</h5>
                 </div>
             </div>
         </section>
@@ -120,7 +120,7 @@
             <div class="section-title">Skills</div>
             <div class="talent">
                 <h5>AI Augmented Development</h5>
-                <p>Pioneering a new approach to software development using agentic workflows to radically improve software development productivity.</p>
+                <p>Pioneering a new approach to software development using agentic workflows to radically improve software developer productivity</p>
             </div>
             <div class="talent">
                 <h5>Infrastructure</h5>
