--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 well as technical leadership. A passion for working with smart (and funny) people to engineer great product.
             </p>
             <p>
-                Currently looking for short to medium term contract work as a backend or full stack engineer.
+                An expert in using AI to build state of the art agentic systems.
             </p>
         </section>
 
