--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <header class="cv-header">
             <div class="cv-header__info">
                 <h1 class="cv-header__name">Adam Chesney</h1>
-                <p class="cv-header__title">Full Stack Engineer & Architect</p>
+                <p class="cv-header__title">AI Engineer & Architect</p>
                 <div class="cv-header__contact">
                     <a href="mailto:ajchesney@gmail.com">ajchesney@gmail.com</a>
                     <a href="https://www.linkedin.com/in/adamchesney" target="_blank">LinkedIn</a>
@@ -671,6 +671,7 @@
                         <span class="cv-tech-tag">TypeScript</span>
                         <span class="cv-tech-tag">Vue</span>
                         <span class="cv-tech-tag">React</span>
+                        <span class="cv-tech-tag">Python</span>
                     </div>
                 </div>
                 <div class="cv-tech-column">
@@ -680,7 +681,6 @@
                         <span class="cv-tech-tag">AWS</span>
                         <span class="cv-tech-tag">GCP</span>
                         <span class="cv-tech-tag">Docker</span>
-                        <span class="cv-tech-tag">Kubernetes</span>
                         <span class="cv-tech-tag">PostgreSQL</span>
                         <span class="cv-tech-tag">Supabase</span>
                     </div>
@@ -692,6 +692,7 @@
                         <span class="cv-tech-tag">Microservices</span>
                         <span class="cv-tech-tag">CI/CD</span>
                         <span class="cv-tech-tag">TDD</span>
+                        <span class="cv-tech-tag">REST</span>
                         <span class="cv-tech-tag">GraphQL</span>
                         <span class="cv-tech-tag">Event-Driven</span>
                     </div>
