--- a/index.html
+++ b/index.html
@@ -530,7 +530,9 @@
             }
 
             body::before {
-                display: none;
+                display: none !important;
+                content: none !important;
+                background-image: none !important;
             }
 
             .cv-container {
