--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Chesney | AI Engineer & Architect</title>
+    <title>Adam_Chesney_AI_Engineer</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -590,6 +590,7 @@
                 <h1 class="cv-header__name">Adam Chesney</h1>
                 <p class="cv-header__title">AI Engineer & Architect</p>
                 <div class="cv-header__contact">
+                    <a href="https://adamchesney.com">adamchesney.com</a>
                     <a href="mailto:ajchesney@gmail.com">ajchesney@gmail.com</a>
                     <a href="https://www.linkedin.com/in/adamchesney" target="_blank">LinkedIn</a>
                     <a href="https://github.com/TiGz" target="_blank">GitHub</a>
